kubernetes/services/headlamp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
  annotations:
    hub.radunenu.com/url: https://hl.infra.radunenu.com
    hub.radunenu.com/description: Kubernetes dashboard, read-only login
